--- a/DiscordEventBot.Common/Resources/Resources.resx
+++ b/DiscordEventBot.Common/Resources/Resources.resx
@@ -129,20 +129,44 @@
   <data name="txt_cmd_help_help_sum" xml:space="preserve">
     <value>Displays every command that you can use</value>
   </data>
+  <data name="txt_mod_event_name" xml:space="preserve">
+    <value>Event Commands</value>
+  </data>
+  <data name="txt_mod_help_name" xml:space="preserve">
+    <value>Help Commands</value>
+  </data>
+  <data name="txt_msg_alreadyoined" xml:space="preserve">
+    <value>You already joined!</value>
+  </data>
   <data name="txt_msg_cmdoverview_desc" xml:space="preserve">
     <value>Here is a list of commands that the bot understands. You may want more details on specific commands. Use `help *command*`</value>
   </data>
   <data name="txt_msg_cmdoverview_title" xml:space="preserve">
     <value>Bot command reference</value>
   </data>
+  <data name="txt_msg_eventcreated" xml:space="preserve">
+    <value>Event succesfully created. See below for details.</value>
+  </data>
+  <data name="txt_msg_eventnotfound" xml:space="preserve">
+    <value>Event not found</value>
+  </data>
   <data name="txt_msg_nosummary" xml:space="preserve">
     <value>No summary :(</value>
+  </data>
+  <data name="txt_msg_ok" xml:space="preserve">
+    <value>OK!</value>
   </data>
   <data name="txt_word_alias" xml:space="preserve">
     <value>Alias</value>
   </data>
+  <data name="txt_word_attendee" xml:space="preserve">
+    <value>Attendee</value>
+  </data>
   <data name="txt_word_none" xml:space="preserve">
     <value>None</value>
+  </data>
+  <data name="txt_word_starttime" xml:space="preserve">
+    <value>Start time</value>
   </data>
   <data name="txt__word_remarks" xml:space="preserve">
     <value>Remarks</value>
