--- a/DiscordEventBot.Common/Resources/Resources.resx
+++ b/DiscordEventBot.Common/Resources/Resources.resx
@@ -147,6 +147,12 @@
   <data name="txt_msg_eventcreated" xml:space="preserve">
     <value>Event succesfully created. See below for details.</value>
   </data>
+  <data name="txt_msg_eventlist_footer" xml:space="preserve">
+    <value>To view more details about an event type `event show [id]`</value>
+  </data>
+  <data name="txt_msg_eventlist_title" xml:space="preserve">
+    <value>Upcomming events</value>
+  </data>
   <data name="txt_msg_eventnotfound" xml:space="preserve">
     <value>Event not found</value>
   </data>
