--- a/DiscordEventBot.Common/Resources/Resources.resx
+++ b/DiscordEventBot.Common/Resources/Resources.resx
@@ -129,8 +129,38 @@
   <data name="txt_cmd_help_help_sum" xml:space="preserve">
     <value>Displays every command that you can use</value>
   </data>
+  <data name="txt_mod_event_cmd_add-group_sum" xml:space="preserve">
+    <value>adds a group to an event</value>
+  </data>
+  <data name="txt_mod_event_cmd_create_sum" xml:space="preserve">
+    <value>creates an event within this server</value>
+  </data>
+  <data name="txt_mod_event_cmd_delete_sum" xml:space="preserve">
+    <value>deletes the given event</value>
+  </data>
+  <data name="txt_mod_event_cmd_join-group_sum" xml:space="preserve">
+    <value>joins the given event within the given group</value>
+  </data>
+  <data name="txt_mod_event_cmd_join_sum" xml:space="preserve">
+    <value>joins the given event</value>
+  </data>
+  <data name="txt_mod_event_cmd_leave-group_sum" xml:space="preserve">
+    <value>leaves the given event group</value>
+  </data>
+  <data name="txt_mod_event_cmd_leave_sum" xml:space="preserve">
+    <value>leaves the given event</value>
+  </data>
+  <data name="txt_mod_event_cmd_show-next_sum" xml:space="preserve">
+    <value>shows the next X events</value>
+  </data>
+  <data name="txt_mod_event_cmd_show_sum" xml:space="preserve">
+    <value>View details about the given event</value>
+  </data>
   <data name="txt_mod_event_name" xml:space="preserve">
     <value>Event Commands</value>
+  </data>
+  <data name="txt_mod_event_sum" xml:space="preserve">
+    <value>provides commands for managing guild events</value>
   </data>
   <data name="txt_mod_help_name" xml:space="preserve">
     <value>Help Commands</value>
