--- a/DiscordEventBot.Common/Resources/Resources.resx
+++ b/DiscordEventBot.Common/Resources/Resources.resx
@@ -225,6 +225,9 @@
   <data name="txt_msg_ok" xml:space="preserve">
     <value>OK!</value>
   </data>
+  <data name="txt_msg_wrong_channel" xml:space="preserve">
+    <value>Shhh! I am not allowed to speak in this channel and you should not message me using this channel. I've deleted your message before anyone notices.</value>
+  </data>
   <data name="txt_word_alias" xml:space="preserve">
     <value>Alias</value>
   </data>
