--- a/DiscordEventBot.Common/Resources/Resources.de.resx
+++ b/DiscordEventBot.Common/Resources/Resources.de.resx
@@ -150,6 +150,12 @@
   <data name="txt_mod_eventtpl_cmd_create_sum" xml:space="preserve">
     <value>Erzeugt eine Ereignisvorlage, die zum Erstellen einzelner Ereignisse verwendet werden kann.</value>
   </data>
+  <data name="txt_mod_eventtpl_cmd_deletegrp_rem" xml:space="preserve">
+    <value>Das Löschen einer Gruppe aus einer Ereignisvorlage hat keine Auswirkungen auf bereits erstellte Ereignisse</value>
+  </data>
+  <data name="txt_mod_eventtpl_cmd_deletegrp_sum" xml:space="preserve">
+    <value>löscht eine Gruppe aus einer Ereignis-Vorlage</value>
+  </data>
   <data name="txt_mod_eventtpl_cmd_delete_rem" xml:space="preserve">
     <value>Dadurch werden keine Ereignisse gelöscht, die mit dieser Vorlage erstellt wurden. Sie müssen sie manuell löschen.</value>
   </data>
@@ -248,6 +254,9 @@
   </data>
   <data name="txt_msg_ok" xml:space="preserve">
     <value>OK!</value>
+  </data>
+  <data name="txt_msg_templateexists" xml:space="preserve">
+    <value>Diese Vorlage existiert bereits. Sie können sie mit dem Befehl `event template update` ändern.</value>
   </data>
   <data name="txt_msg_wrong_channel" xml:space="preserve">
     <value>Pssst! Ich darf in diesem Kanal nicht sprechen und du solltest mich nicht über diesen Kanal ansprechen. Ich habe deine Nachricht gelöscht, bevor es jemand merkt.</value>
