--- a/DiscordEventBot.Common/Resources/Resources.resx
+++ b/DiscordEventBot.Common/Resources/Resources.resx
@@ -150,6 +150,12 @@
   <data name="txt_mod_eventtpl_cmd_create_sum" xml:space="preserve">
     <value>Creates an event template that can be used to create individual events.</value>
   </data>
+  <data name="txt_mod_eventtpl_cmd_deletegrp_rem" xml:space="preserve">
+    <value>Deleting a group from an event template does not affect already created events</value>
+  </data>
+  <data name="txt_mod_eventtpl_cmd_deletegrp_sum" xml:space="preserve">
+    <value>deletes a group from an event template</value>
+  </data>
   <data name="txt_mod_eventtpl_cmd_delete_rem" xml:space="preserve">
     <value>This does not delete any events that were created using this template. You need to delete them manually.</value>
   </data>
@@ -248,6 +254,9 @@
   </data>
   <data name="txt_msg_ok" xml:space="preserve">
     <value>OK!</value>
+  </data>
+  <data name="txt_msg_templateexists" xml:space="preserve">
+    <value>This template already exists. You can modify it using the `event template update` command.</value>
   </data>
   <data name="txt_msg_wrong_channel" xml:space="preserve">
     <value>Shhh! I am not allowed to speak in this channel and you should not message me using this channel. I've deleted your message before anyone notices.</value>
