--- a/DiscordEventBot.Common/Resources/Resources.de.resx
+++ b/DiscordEventBot.Common/Resources/Resources.de.resx
@@ -144,8 +144,32 @@
   <data name="txt_mod_adm_sum" xml:space="preserve">
     <value>Befehle zur verwaltung des Bots.</value>
   </data>
+  <data name="txt_mod_eventtpl_cmd_add-group_sum" xml:space="preserve">
+    <value>fügt eine Gruppe zu einer Ereignisvorlage hinzu.</value>
+  </data>
+  <data name="txt_mod_eventtpl_cmd_create_sum" xml:space="preserve">
+    <value>Erzeugt eine Ereignisvorlage, die zum Erstellen einzelner Ereignisse verwendet werden kann.</value>
+  </data>
+  <data name="txt_mod_eventtpl_cmd_deletegrp_rem" xml:space="preserve">
+    <value>Das Löschen einer Gruppe aus einer Ereignisvorlage hat keine Auswirkungen auf bereits erstellte Ereignisse</value>
+  </data>
+  <data name="txt_mod_eventtpl_cmd_deletegrp_sum" xml:space="preserve">
+    <value>löscht eine Gruppe aus einer Ereignis-Vorlage</value>
+  </data>
+  <data name="txt_mod_eventtpl_cmd_delete_rem" xml:space="preserve">
+    <value>Dadurch werden keine Ereignisse gelöscht, die mit dieser Vorlage erstellt wurden. Sie müssen sie manuell löschen.</value>
+  </data>
+  <data name="txt_mod_eventtpl_cmd_delete_sum" xml:space="preserve">
+    <value>Löscht eine Vorlage</value>
+  </data>
+  <data name="txt_mod_eventtpl_cmd_list_sum" xml:space="preserve">
+    <value>Listet jede Vorlage in dieser Gilde auf</value>
+  </data>
   <data name="txt_mod_event_cmd_add-group_sum" xml:space="preserve">
     <value>fügt eine Gruppe zu einer Veranstaltung hinzu</value>
+  </data>
+  <data name="txt_mod_event_cmd_createftpl_sum" xml:space="preserve">
+    <value>Erzeugt ein Ereignis unter Verwendung einer Vorlage. Alle Werte, außer dem Startdatum, werden aus der vordefinierten Vorlage gezogen.</value>
   </data>
   <data name="txt_mod_event_cmd_create_sum" xml:space="preserve">
     <value>erstellt eine Veranstaltung für diesen Server</value>
@@ -231,6 +255,9 @@
   <data name="txt_msg_ok" xml:space="preserve">
     <value>OK!</value>
   </data>
+  <data name="txt_msg_templateexists" xml:space="preserve">
+    <value>Diese Vorlage existiert bereits. Sie können sie mit dem Befehl `event template update` ändern.</value>
+  </data>
   <data name="txt_msg_wrong_channel" xml:space="preserve">
     <value>Pssst! Ich darf in diesem Kanal nicht sprechen und du solltest mich nicht über diesen Kanal ansprechen. Ich habe deine Nachricht gelöscht, bevor es jemand merkt.</value>
   </data>
@@ -240,11 +267,20 @@
   <data name="txt_word_attendee" xml:space="preserve">
     <value>Teilnehmer</value>
   </data>
+  <data name="txt_word_duration" xml:space="preserve">
+    <value>Dauer</value>
+  </data>
+  <data name="txt_word_endtime" xml:space="preserve">
+    <value>Ende</value>
+  </data>
   <data name="txt_word_none" xml:space="preserve">
     <value>Keine</value>
   </data>
   <data name="txt_word_starttime" xml:space="preserve">
     <value>Beginn</value>
+  </data>
+  <data name="txt_word_subject" xml:space="preserve">
+    <value>Betreff</value>
   </data>
   <data name="txt__word_remarks" xml:space="preserve">
     <value>Bemerkungen</value>
