--- a/DiscordEventBot.Common/Resources/Resources.resx
+++ b/DiscordEventBot.Common/Resources/Resources.resx
@@ -129,14 +129,29 @@
   <data name="txt_cmd_help_help_sum" xml:space="preserve">
     <value>Displays every command that you can use</value>
   </data>
+  <data name="txt_mod_admset_cmd_setadminrole_param_role_sum" xml:space="preserve">
+    <value>The role that should be given access to certain commands.</value>
+  </data>
   <data name="txt_mod_admset_cmd_setadminrole_sum" xml:space="preserve">
     <value>Sets a role that enables any member of it to use the admin commands.</value>
+  </data>
+  <data name="txt_mod_admset_cmd_setbc_param_channel_sum" xml:space="preserve">
+    <value>The channel in wich the bot reacts to commands.</value>
+  </data>
+  <data name="txt_mod_admset_cmd_setlang_param_lang_sum" xml:space="preserve">
+    <value>The language the bot should speak. E.g. "de" or "en"</value>
   </data>
   <data name="txt_mod_admset_cmd_setlang_sum" xml:space="preserve">
     <value>Sets the language the bot speaks.</value>
   </data>
+  <data name="txt_mod_admset_cmd_setprefix_param_prefix_sum" xml:space="preserve">
+    <value>The prefix the bot should react to in addition to a mention</value>
+  </data>
   <data name="txt_mod_admset_cmd_setprefix_sum" xml:space="preserve">
     <value>set a custom command prefix for this guild</value>
+  </data>
+  <data name="txt_mod_adm_cmd_exit_param_delay_sum" xml:space="preserve">
+    <value>Delay time before the bot initialtes the shutdown.</value>
   </data>
   <data name="txt_mod_adm_cmd_exit_sum" xml:space="preserve">
     <value>Stops the bot.</value>
@@ -150,14 +165,44 @@
   <data name="txt_mod_eventtpl_cmd_add-group_sum" xml:space="preserve">
     <value>adds a group to an event template.</value>
   </data>
+  <data name="txt_mod_eventtpl_cmd_addgroup_param_capacity_sum" xml:space="preserve">
+    <value>The maximum capacity of the group</value>
+  </data>
+  <data name="txt_mod_eventtpl_cmd_addgroup_param_groupname_sum" xml:space="preserve">
+    <value>Name of the group you want to add.</value>
+  </data>
+  <data name="txt_mod_eventtpl_cmd_addgroup_param_template_sum" xml:space="preserve">
+    <value>The id or name of the template you want to add a group to.</value>
+  </data>
+  <data name="txt_mod_eventtpl_cmd_create_param_description_sum" xml:space="preserve">
+    <value>Description of the event that this template creates.</value>
+  </data>
+  <data name="txt_mod_eventtpl_cmd_create_param_duration_sum" xml:space="preserve">
+    <value>Duration of the event that this template creates.</value>
+  </data>
+  <data name="txt_mod_eventtpl_cmd_create_param_name_sum" xml:space="preserve">
+    <value>The name of the template you want to create. This cannot be changed after the creation. Choose a name that is easy to remember and easy to type.</value>
+  </data>
+  <data name="txt_mod_eventtpl_cmd_create_param_subject_sum" xml:space="preserve">
+    <value>Title of the event that this template creates.</value>
+  </data>
   <data name="txt_mod_eventtpl_cmd_create_sum" xml:space="preserve">
     <value>Creates an event template that can be used to create individual events.</value>
+  </data>
+  <data name="txt_mod_eventtpl_cmd_deletegrp_param_groupindex_sum" xml:space="preserve">
+    <value>The index of the group you want to delete. This index is 1-based. To delete the first group secify 1. To delete the second group specify 2 and so on.</value>
+  </data>
+  <data name="txt_mod_eventtpl_cmd_deletegrp_param_template_sum" xml:space="preserve">
+    <value>The id or name of the template you want to delete a group from.</value>
   </data>
   <data name="txt_mod_eventtpl_cmd_deletegrp_rem" xml:space="preserve">
     <value>Deleting a group from an event template does not affect already created events</value>
   </data>
   <data name="txt_mod_eventtpl_cmd_deletegrp_sum" xml:space="preserve">
     <value>deletes a group from an event template</value>
+  </data>
+  <data name="txt_mod_eventtpl_cmd_delete_param_template_sum" xml:space="preserve">
+    <value>The id or name of the template you want to delete.</value>
   </data>
   <data name="txt_mod_eventtpl_cmd_delete_rem" xml:space="preserve">
     <value>This does not delete any events that were created using this template. You need to delete them manually.</value>
@@ -168,14 +213,56 @@
   <data name="txt_mod_eventtpl_cmd_list_sum" xml:space="preserve">
     <value>Lists every template in this guild</value>
   </data>
+  <data name="txt_mod_eventtpl_cmd_update_param_description_sum" xml:space="preserve">
+    <value>The new description. Leave empty if you don't want to change it.</value>
+  </data>
+  <data name="txt_mod_eventtpl_cmd_update_param_duration_sum" xml:space="preserve">
+    <value>The new duration of the event. E.g. 2h30m30s for 2 hours, 30 minutes and 30 seconds. You can leave out any component that you don't need. If your event is only 30 minutes you can write "30m". specify "null" if you don't want to change it.</value>
+  </data>
+  <data name="txt_mod_eventtpl_cmd_update_param_subject_sum" xml:space="preserve">
+    <value>The new title. Leave empty if you don't want to change it.</value>
+  </data>
+  <data name="txt_mod_eventtpl_cmd_update_param_template_sum" xml:space="preserve">
+    <value>The id or name of the template you want to change.</value>
+  </data>
   <data name="txt_mod_event_cmd_add-group_sum" xml:space="preserve">
     <value>adds a group to an event</value>
+  </data>
+  <data name="txt_mod_event_cmd_addgroup_param_capacity_sum" xml:space="preserve">
+    <value>Capacity of the new group. Limits the number of attendees in this group when set.</value>
+  </data>
+  <data name="txt_mod_event_cmd_addgroup_param_eventid_sum" xml:space="preserve">
+    <value>The id of the event to wich the group should be added</value>
+  </data>
+  <data name="txt_mod_event_cmd_addgroup_param_groupname_sum" xml:space="preserve">
+    <value>Name of the new group</value>
+  </data>
+  <data name="txt_mod_event_cmd_createftpl_param_startdate_sum" xml:space="preserve">
+    <value>The duration of the event. E.g. 2h30m30s for 2 hours, 30 minutes and 30 seconds. You can leave out any component that you don't need. If your event is only 30 minutes you can write "30m"</value>
+  </data>
+  <data name="txt_mod_event_cmd_createftpl_param_template_sum" xml:space="preserve">
+    <value>The id or name of the template you want to create your event from.</value>
   </data>
   <data name="txt_mod_event_cmd_createftpl_sum" xml:space="preserve">
     <value>Creates an event using a template. Every values, except for the start date are pulled from the predefined template.</value>
   </data>
+  <data name="txt_mod_event_cmd_create_param_description_sum" xml:space="preserve">
+    <value>a long and detailed description of your event. This can be as long as you want.</value>
+  </data>
+  <data name="txt_mod_event_cmd_create_param_duration_sum" xml:space="preserve">
+    <value>The duration of the event. E.g. 2h30m30s for 2 hours, 30 minutes and 30 seconds. You can leave out any component that you don't need. If your event is only 30 minutes you can write "30m"</value>
+  </data>
+  <data name="txt_mod_event_cmd_create_param_startdate_sum" xml:space="preserve">
+    <value>Start date and time of the event.E.g. "1.1.2020 13:00" for 1st January of 2020 at 1 PM</value>
+  </data>
+  <data name="txt_mod_event_cmd_create_param_subject_sum" xml:space="preserve">
+    <value>Title of the event.</value>
+  </data>
   <data name="txt_mod_event_cmd_create_sum" xml:space="preserve">
     <value>creates an event within this server</value>
+  </data>
+  <data name="txt_mod_event_cmd_delete_param_eventid_sum" xml:space="preserve">
+    <value>The id of the event you want to delete</value>
   </data>
   <data name="txt_mod_event_cmd_delete_sum" xml:space="preserve">
     <value>deletes the given event</value>
@@ -183,17 +270,53 @@
   <data name="txt_mod_event_cmd_join-group_sum" xml:space="preserve">
     <value>joins the given event within the given group</value>
   </data>
+  <data name="txt_mod_event_cmd_joingroup_param_eventid_sum" xml:space="preserve">
+    <value>The id of the event you want to join</value>
+  </data>
+  <data name="txt_mod_event_cmd_joingroup_param_groupname_sum" xml:space="preserve">
+    <value>Name of the group you want to join</value>
+  </data>
+  <data name="txt_mod_event_cmd_joingroup_param_user_sum" xml:space="preserve">
+    <value>The user you want to join the event. You can either mention it or write it's user- or nickname.</value>
+  </data>
+  <data name="txt_mod_event_cmd_join_param_eventid_sum" xml:space="preserve">
+    <value>The id of the event you want to join</value>
+  </data>
+  <data name="txt_mod_event_cmd_join_param_user_sum" xml:space="preserve">
+    <value>The user you want to join the event. You can either mention it or write it's user- or nickname.</value>
+  </data>
   <data name="txt_mod_event_cmd_join_sum" xml:space="preserve">
     <value>joins the given event</value>
   </data>
   <data name="txt_mod_event_cmd_leave-group_sum" xml:space="preserve">
     <value>leaves the given event group</value>
   </data>
+  <data name="txt_mod_event_cmd_leavegroup_param_eventid_sum" xml:space="preserve">
+    <value>The id of the event you want to leave</value>
+  </data>
+  <data name="txt_mod_event_cmd_leavegroup_param_groupname_sum" xml:space="preserve">
+    <value>The name of the group you want to leave</value>
+  </data>
+  <data name="txt_mod_event_cmd_leavegroup_param_user_sum" xml:space="preserve">
+    <value>The user you want to leave the event. You can either mention it or write it's user- or nickname.</value>
+  </data>
+  <data name="txt_mod_event_cmd_leave_param_eventid_sum" xml:space="preserve">
+    <value>The id of the event you want to leave</value>
+  </data>
+  <data name="txt_mod_event_cmd_leave_param_user_sum" xml:space="preserve">
+    <value>The user you want to leave the event. You can either mention it or write it's user- or nickname.</value>
+  </data>
   <data name="txt_mod_event_cmd_leave_sum" xml:space="preserve">
     <value>leaves the given event</value>
   </data>
   <data name="txt_mod_event_cmd_show-next_sum" xml:space="preserve">
     <value>shows the next X events</value>
+  </data>
+  <data name="txt_mod_event_cmd_shownext_param_count_sum" xml:space="preserve">
+    <value>The number of events you want to list. Default is 10.</value>
+  </data>
+  <data name="txt_mod_event_cmd_show_param_eventid_sum" xml:space="preserve">
+    <value>The id of the event you want to view</value>
   </data>
   <data name="txt_mod_event_cmd_show_sum" xml:space="preserve">
     <value>View details about the given event</value>
@@ -203,6 +326,12 @@
   </data>
   <data name="txt_mod_event_sum" xml:space="preserve">
     <value>provides commands for managing guild events</value>
+  </data>
+  <data name="txt_mod_help_cmd_help_param_command_sum" xml:space="preserve">
+    <value>The name of the command you want to view.</value>
+  </data>
+  <data name="txt_mod_help_cmd_help_param_module_sum" xml:space="preserve">
+    <value>The name of the module you want to view.</value>
   </data>
   <data name="txt_mod_help_name" xml:space="preserve">
     <value>Help Commands</value>
@@ -223,7 +352,8 @@
     <value>You already joined!</value>
   </data>
   <data name="txt_msg_cmdoverview_desc" xml:space="preserve">
-    <value>Here is a list of commands that the bot understands. You may want more details on specific commands. Use `help *command*`</value>
+    <value>Here you can find a list of commands that the bot understands. You may want to know more details about specific commands. Use `help *command*`. Commands can consist of several words. To execute a command it must be written out in full. E.g. `event create`.
+All parameters are separated by a space. If you want to use a space within a parameter enclose the value with quotes ("). Date values are always specified including the time. The format follows the language of the bot. For example, you can use the format "12/31/2020 01:00PM".</value>
   </data>
   <data name="txt_msg_cmdoverview_title" xml:space="preserve">
     <value>Bot command reference</value>
@@ -264,11 +394,17 @@
   <data name="txt_msg_wrong_channel" xml:space="preserve">
     <value>Shhh! I am not allowed to speak in this channel and you should not message me using this channel. I've deleted your message before anyone notices.</value>
   </data>
+  <data name="txt_phrase_isoptional" xml:space="preserve">
+    <value>Is optional?</value>
+  </data>
   <data name="txt_word_alias" xml:space="preserve">
     <value>Alias</value>
   </data>
   <data name="txt_word_attendee" xml:space="preserve">
     <value>Attendee</value>
+  </data>
+  <data name="txt_word_datatype" xml:space="preserve">
+    <value>Type</value>
   </data>
   <data name="txt_word_duration" xml:space="preserve">
     <value>Duration</value>
@@ -276,14 +412,26 @@
   <data name="txt_word_endtime" xml:space="preserve">
     <value>End time</value>
   </data>
+  <data name="txt_word_name" xml:space="preserve">
+    <value>Name</value>
+  </data>
+  <data name="txt_word_no" xml:space="preserve">
+    <value>No</value>
+  </data>
   <data name="txt_word_none" xml:space="preserve">
     <value>None</value>
+  </data>
+  <data name="txt_word_parameters" xml:space="preserve">
+    <value>Parameters</value>
   </data>
   <data name="txt_word_starttime" xml:space="preserve">
     <value>Start time</value>
   </data>
   <data name="txt_word_subject" xml:space="preserve">
     <value>Subject</value>
+  </data>
+  <data name="txt_word_yes" xml:space="preserve">
+    <value>Yes</value>
   </data>
   <data name="txt__word_remarks" xml:space="preserve">
     <value>Remarks</value>
